--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -8,14 +8,16 @@
         <!-- Tocas JS：模塊與 JavaScript 函式 -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tocas-ui/2.3.3/tocas.js"></script>
         <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+        <meta name="description" content="將簡體 EPUB 轉換為繁體 EPUB 的線上工具。支援拖放上傳，且上傳後即刻開始轉換，數秒內即轉換完成。">
+        <meta name="keywords" content="epub,EPUB,chinese,ebook,電子書,簡體,繁體,簡繁轉換,簡轉繁,簡體轉繁體,線上工具">
     </head>
-    <title>EPUB Convert</title>
+    <title>EPUB 簡轉繁</title>
     <body>
         <form action="/api/convert" method="post" enctype="multipart/form-data" name="form" id="form">
             <input type="file" name="upload" id="upload" accept=".epub" />
         </form>
         <div class="ts center aligned big header">
-            EPUB Convert
+            EPUB 簡轉繁
         </div>
         <div class="ts container" id="main">
             <div class="ts basic padded dashed clickable slate" id="dragzone" data-mode="selecting">
