--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -58,7 +58,7 @@
             <p class="ts-text">&copy; Stone App | <a class="ts-text is-link" href="https://github.com/stoneapptech/epub_convert">GitHub Repo</a></p>
         </footer>
         <!-- snackbar -->
-        <div class="ts-snackbar">
+        <div class="ts-snackbar is-fading-up">
             <div class="content"></div>
         </div>
 
