--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tocas-ui/4.0.4/tocas.css">
         <!-- Tocas JS：模塊與 JavaScript 函式 -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tocas-ui/4.0.4/tocas.js"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
         <meta name="description" content="將簡體 EPUB 轉換為繁體 EPUB 的線上工具。支援拖放上傳，且上傳後即刻開始轉換，數秒內即轉換完成。">
         <meta name="keywords" content="epub,EPUB,chinese,ebook,電子書,簡體,繁體,簡繁轉換,簡轉繁,簡體轉繁體,線上工具">
