[Style] `is-negative` progress bar

--- a/static/main.css
+++ b/static/main.css
@@ -109,6 +109,10 @@ body, .ts-box, footer.ts-content, .ts-close {
     opacity: 0;
 }
 
+#progressbar.is-negative .bar {
+    background-color: var(--ts-negative-500);
+}
+
 /* snackbar */
 .ts-snackbar {
     position: fixed;
